feat: update single.html layout

--- a/content/contact.html
+++ b/content/contact.html
@@ -5,9 +5,9 @@ tags: []
 ---
 
 
-<div class="container p-5">
+<div class="container py-5">
 	<div class="row justify-content-center align-items-center">
-		<div class="col-11 col-md-8 col-lg-6">
+		<div class="col-12 col-md-8 col-lg-6">
 			<h1 class="mb-3">Let's Connect</h1>
 			<form
 				action="https://formspree.io/f/maykpava"
