--- a/content/about.html
+++ b/content/about.html
@@ -3,7 +3,7 @@ title: "About"
 draft: false
 ---
 
-<div class="container">
+<div class="container vh-100">
 	<div class="row align-items-center justify-content-center">
 		
 		<!-- left side  -->
