--- a/content/about.html
+++ b/content/about.html
@@ -3,20 +3,21 @@ title: "About"
 draft: false
 ---
 
-<div class="container vh-100">
+<div class="container">
 	<div class="row align-items-center justify-content-center">
 		
 		<!-- left side  -->
 		<div class="col-12 col-lg-6 d-flex justify-content-center align-items-center">
-			<div style="padding: 15%">
+			<div class="headshot-container" style="padding: 15%">
 				<img 
 				src="https://i.imgur.com/TB7PCLE.png" 
-				class="img-fluid"
+				class="img-fluid rounded"
 				alt="headshot" 
-				style="border-radius: 5px;">
+				>
 			</div>
 		</div>
-
+		<!-- left side  -->
+		
 		<!-- right side  -->
 		<div class="col-12 col-lg-6 mb-5">
 			<h1>
@@ -32,7 +33,9 @@ draft: false
 				My strength lies in my curiosity. I'm always on the hunt for solutions to problems and learning different ways to approach challenges
 			</p>
 		</div>
+		<!-- right side  -->
 
+		</div>
 	</div>
 </div>
 
