--- a/content/about.html
+++ b/content/about.html
@@ -8,7 +8,7 @@ draft: false
 		
 		<!-- left side  -->
 		<div class="col-12 col-lg-6 d-flex justify-content-center align-items-center">
-			<div class="headshot-container" style="padding: 15%">
+			<div style="padding: 15%">
 				<img 
 				src="https://i.imgur.com/TB7PCLE.png" 
 				class="img-fluid rounded"
