--- a/content/about.html
+++ b/content/about.html
@@ -3,8 +3,8 @@ title: "About"
 draft: false
 ---
 
-<div class="container vh-100">
-	<div class="row align-items-center justify-content-center">
+<div class="container" style="min-height: 100vh;">
+	<div class="row align-items-center justify-content-center mb-5">
 		
 		<!-- left side  -->
 		<div class="col-12 col-lg-6 d-flex justify-content-center align-items-center">
@@ -30,7 +30,7 @@ draft: false
 				I’ve always been fascinated with tinkering and building things, from model kits to carpentry to automotive repairs. But when I came across software development, I knew I had found myself a new digital sandbox to play in.
 				<br>
 				<br>	
-				My strength lies in my curiosity. I'm always on the hunt for solutions to problems and learning different ways to approach challenges
+				My strength lies in my curiosity. I'm always on the hunt for solutions to problems and learning different ways to approach challenges.
 			</p>
 		</div>
 		<!-- right side  -->
