feat: update contact form

--- a/content/contact.html
+++ b/content/contact.html
@@ -13,19 +13,19 @@ title: "Contact"
 			>
 				<!-- name input  -->
 				<div class="form-floating mb-3">
-					<input type="text" class="form-control" id="name" placeholder="name" required>
+					<input type="text" class="form-control" id="name" name="name" placeholder="name" required>
 					<label for="name" class="form-label">Name</label>
 				</div>
 
 				<!-- email input  -->
 				<div class="form-floating mb-3">
-					<input type="email" class="form-control" id="email" placeholder="name@example.com">
+					<input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required>
 					<label for="email">Email</label>
 				</div>
 			
 				<!-- text area input  -->
 				<div class="form-floating mb-3">
-					<textarea class="form-control" id="text-area" placeholder="Type your message here" required style="height: 100px"></textarea>
+					<textarea class="form-control" id="text-area" name="text-area" placeholder="Type your message here" style="height: 100px" required></textarea>
 					<label for="text-area" class="form-label">Textarea</label>
 				</div>
 
