feat: minor updates

--- a/content/contact.html
+++ b/content/contact.html
@@ -44,7 +44,7 @@ title: "Contact"
 					</h2>
 					<div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
 						<div class="accordion-body">
-							I am a full-stack developer with a strong grasp on front-end concepts, tools, and technologies.
+							I am a full-stack developer with a strong emphasis on front-end concepts, tools, and technologies.
 						</div>
 					</div>
 				</div>
